<resources>
    <string name="app_name">DataAggregator</string>

    <string name="action_settings">Settings</string>

    <!-- Main/User Information Activity-->
    <string name="get_started">To get started, tell us a little bit about yourself.</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="gender">Gender</string>
    <string name="birthday">Birthday</string>
    <string name="feet">Feet</string>
    <string name="inches">inches</string>
    <string name="abvFeet">ft.</string>
    <string name="abvInches">in.</string>
    <string name="done">Done</string>
    <string name="settings_prompt">Change Settings Here</string>

    <string-array name="feet">
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
    </string-array>

    <string-array name="inches">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
    </string-array>

    <string-array name="genders">
        <item>Male</item>
        <item>Female</item>
    </string-array>

    <string name="title_activity_add_asensor">Add A Sensor</string>
    <string name="add_a_sensor">Add a Sensor</string>
    <string name="remove_a_sensor">Remove a Sensor</string>

    <string-array name="devices">
        <item>Joe\'s Moto 360</item>
        <item>Andy\'s Moto 360</item>
    </string-array>

    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_signup">Sign Up</string>

    <!-- Strings related to login and sign up -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_up">Sign Up</string>

    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>

</resources>
