<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:theme="@style/AppTheme"
                tools:context=".MainActivity">

    <TextView
            android:text="@string/get_started"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            style="@android:style/TextAppearance.Large" android:singleLine="false"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:id="@+id/txtPrompt"/>
    <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:id="@+id/tableLayout"
            android:layout_below="@+id/txtPrompt" android:layout_centerHorizontal="true">
        <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="Name"
                    android:id="@+id/textView" android:layout_column="0"/>
            <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/editText3" android:hint="John Smith" android:layout_column="2"
                    android:gravity="center_horizontal"/>
        </TableRow>
        <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/tblrHeight"
                android:paddingTop="@dimen/abc_control_padding_material" android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp">
            <TextView
                    android:layout_column="0"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/height"
                    android:id="@+id/lblHeight"
                    style="@android:style/TextAppearance.Medium"/>
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:layout_column="2" android:layout_gravity="center">
                <Spinner
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/spinFeet" android:spinnerMode="dropdown"
                        android:contentDescription="@string/feet"
                        android:entries="@array/feet"/>
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/abvFeet"
                        android:id="@+id/lblFeet"
                        style="@android:style/TextAppearance.Small"/>
                <Spinner
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/spinInches"
                        android:contentDescription="@string/inches"
                        android:entries="@array/inches" android:spinnerMode="dropdown"
                        />
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/abvInches"
                        android:id="@+id/lblInches"
                        style="@android:style/TextAppearance.Small"/>
            </LinearLayout>
        </TableRow>
        <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/tblrWeight"
                android:paddingTop="@dimen/abc_control_padding_material" android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp">
            <TextView
                    android:layout_column="0"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/weight"
                    android:id="@+id/lblWeight"
                    style="@android:style/TextAppearance.Medium"/>
            <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:ems="10"
                    android:id="@+id/edtxtWeight" android:textAlignment="center"
                    android:layout_marginLeft="10dp" android:layout_marginRight="10dp" android:layout_column="2"
                    android:autoText="false" android:singleLine="true" android:numeric="integer" android:hint="170"
                    android:gravity="center_horizontal"/>
        </TableRow>
        <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/tblrGender"
                android:paddingTop="@dimen/abc_control_padding_material" android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp">
            <TextView
                    android:layout_column="0"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gender"
                    android:id="@+id/lblGender"
                    style="@android:style/TextAppearance.Medium"/>
            <Spinner
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/spinGender" android:layout_column="2" android:entries="@array/genders"
                    android:gravity="center" android:spinnerMode="dropdown"/>
        </TableRow>
        <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/tblrBirthday"
                android:paddingTop="@dimen/abc_control_padding_material" android:layout_marginTop="10dp"
                >
            <TextView
                    android:layout_column="0"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/birthday"
                    android:id="@+id/lblBirthday"
                    style="@android:style/TextAppearance.Medium"/>
            <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="date"
                    android:ems="10"
                    android:id="@+id/edtxtBirthday" android:layout_column="2" android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp" android:hint="01/01/1970" android:gravity="center_horizontal"/>
        </TableRow>
    </TableLayout>
    <Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/done"
            android:id="@+id/button"
            android:layout_alignParentBottom="true" android:layout_centerHorizontal="true"
            android:layout_alignParentEnd="false"/>

</RelativeLayout>
